2006-02-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* usecode/ucinternal.cc: fixed global statics
	* usecode/ucdisasm.cc: fixed global static disassembly

2006-02-06  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: don't make get_map/get_map_num segfault when undefined
	* objs/virstone.*: renamed map/pos functions to get/set_target_pos/map

2006-02-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: fix crash when actor approaches from off-screen

2006-02-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* effects.cc: fix crash for missile without weapon info
	* actors.cc: uninitialized variable

2006-02-04  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Corrected the workings of UI_is_readied and UI_get_readied based
	  on the original games.

2006-02-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/objs.*: removed strange ifdefs around certain functions

2006-02-03  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Reorganized BG Keyring Mod with use of new autonumbering system.
	* Modified SI Fixes to use new autonumbering system.

2006-02-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* files/databuf.h: StreamDataSource::eof() returns eof before actually
	  having read past the end of file, to make this behave consistently
	  with the other DataSources
	* files/msgfile.*: allow reading text file from DataSource
	* shapes/bodies.cc: read bodies_bg/si from .flx files
	* data/*: moved bodies_bg/si to exult_bg/si.flx

2006-02-03  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* ucparse.yy: Added a way to retrieve the assigned number of a
	  given function. Used like this:
		//If function_name is a defined function, fun will
		//have the correct function number:
		var fun = &function_name;
		//Call function_name indirectly:
		(*fun)();
	* uclex.ll, ucsym.*: Added new '#autonumber' directive to UCC.